namespace ABSTRACTIONS.Features.Idiomas
{
    public interface IObservador
    {
        void Actualizar(IIdioma idiomaObservado);
    }
}
