namespace ABSTRACTIONS.Features.Idiomas
{
    public class TraduccionEditable
    {
        public int IdPalabra { get; set; }
        public string Clave { get; set; }
        public string Texto { get; set; }
    }
}
